@@ -75,6 +75,7 @@ Fixed bugs
 - tighten sides of linear constraints before trying to upgrade them to more specialized constraints (knapsack, logic-or etc.) when calling SCIPupgradeConsLinear()
 - fixed an issue in repair heuristic in the case of loose (noncolumn) variables
 - allow user to correctly set heuristics/alns/(un)fixtol
+- fixed an issue in heur_completesol which is triggered during bound widening of unbounded continuous variables
 
 
 Miscellaneous
